--- a/Portfolio/src/app/components/education/education.component.html
+++ b/Portfolio/src/app/components/education/education.component.html
@@ -1,8 +1,8 @@
 <section class="education">
     <div class="educationCover">
         <div class="titleEducation">
-            <h2>Cursos</h2>
-            <h3>Mi trayectoria de aprendizajes</h3>
+            <span>Cursos y Careras</span>
+            <h3>Trayectoria de aprendizajes</h3>
         </div>
         <app-carousel-education></app-carousel-education>
     </div>
