--- a/Portfolio/src/app/components/gallery-works/gallery-works.component.html
+++ b/Portfolio/src/app/components/gallery-works/gallery-works.component.html
@@ -53,7 +53,7 @@
     <div class="containerWork">
         <img src="../../../assets/img/CatalogoAlBordeLlama.jpg" alt="Catálogo Al Borde Llama" class="imgWork">
        <div class="textContainerWork">
-            <h3 class="t-stroke">Al Borde Llama<span>Al Borde Llama</span></h3>
+            <h3 class="t-stroke">ABL<span>ABL</span></h3>
             <h4>Freelancer</h4>
             <h5>Ago 2021</h5>
             <ul>
