--- a/Portfolio/src/styles.css
+++ b/Portfolio/src/styles.css
@@ -4,12 +4,10 @@
     --hueso: #f7f6f5;
     --rosa: #d88da0;
     --rosaClaro: #f1d1d1;
-    --verdeOscuro: #224b0c;
     --grisOscuro: #141414;
     --grisMedio: #2c2c2c;
-    --celeste: #759e9c;
+    --celeste: #80bdbb;
     --oscuridad: #1d1c1c;
-    --transparente: rgba(228, 227, 227, 0.3);
   }
 
 *{
