--- a/Portfolio/src/app/components/about/about.component.css
+++ b/Portfolio/src/app/components/about/about.component.css
@@ -2,6 +2,11 @@
     padding: 80px 0;
     background: var(--grisOscuro);
     color: #fff;
+    -webkit-box-shadow: 0px 4px 65px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 4px 65px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 4px 65px 0px rgba(0,0,0,0.75);
+    position: relative;
+    z-index: 2;
 }
 
 .titleAbout {
@@ -18,8 +23,8 @@
 
 .titleAbout h3 {
     position: relative;
-    top: -8vw;
-    left: 7vw;
+    top: -7.5vw;
+    left: 8vw;
     width: 18vw;
     letter-spacing: 1px;
     font-size: 2vw;
@@ -31,15 +36,16 @@
     width: 8.6vw;
     height: .9vw;
     position: absolute;
-    bottom: -1px;
+    bottom: 0;
     left: 8.6vw;
     background: var(--rosa);
     transition: all .5s ease-in-out;
     z-index: -1;
 }
 
-.titleAbout h3:hover::before {
-    content: '';
-    height: 100%;
-    position: absolute;
+@media (hover: hover) {
+    
+    .titleAbout h3:hover::before {
+        height: 2.1vw;
+    }
 }
