--- a/Portfolio/src/app/components/carousel-education/carousel-education.component.css
+++ b/Portfolio/src/app/components/carousel-education/carousel-education.component.css
@@ -9,6 +9,7 @@
     width: 100%;
     height: 100%;
     position: relative;
+    margin-top: 100px;
 }
 
 .swiperSlideEducation{
@@ -37,7 +38,7 @@
 }
 
 .swiperSlideEducation h4 {
-    font-size: 25px;
+    font-size: 28px;
     margin: 20px 50px;
     letter-spacing: 1px;
     padding-top: 15px;
@@ -45,8 +46,8 @@
 }
 
 .swiperSlideEducation h5 {
-    color: var(--rosa);
-    font-size: 15px;
+    color: var(--celeste);
+    font-size: 18px;
     font-weight: 400;
     letter-spacing: 1px; 
 }
