--- a/Portfolio/src/app/components/projects/projects.component.css
+++ b/Portfolio/src/app/components/projects/projects.component.css
@@ -1,55 +1,119 @@
 .projects {
-    background-image: url("../../../assets/img/BackgroundProjects.jpg");
+    background-image: url("../../../assets/img/BackgroundProjects2.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
 }
 
 .projectsCover {
-    background: rgba(44, 44, 44, 0.3);
-    padding-top: 50px;
-    background: linear-gradient(180deg, rgba(20,20,20,1) 0%, rgba(20,20,20,0) 50%, rgba(20,20,20,1) 100%);
+    background: rgba(19, 19, 19, 0.5);
+    padding-top: 120px;
 }
 
 .titleProjects {
     width: 70%;
     margin: auto;
-    text-align: left;
-}
-
-.titleProjects h2 {
-    color: var(--transparente);
-    font-size: 13vw;
-    font-family: aileron, sans-serif;
-    font-weight: 800;
-    letter-spacing: -.5vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .titleProjects h3 {
     position: relative;
-    top: -7.5vw;
-    left: 7vw;
-    width: 27vw;
+    margin: auto;
     letter-spacing: 1px;
-    font-size: 2vw;
+    font-weight: 800;
+    font-size: 3vw;
     color: whitesmoke;
     z-index: 2;
 }
 
 .titleProjects h3::before {
     content: '';
-    width: 9.9vw;
-    height: .9vw;
+    width: 15.2vw;
+    height: 1.3vw;
     position: absolute;
-    bottom: -1px;
+    bottom: 2px;
+    left: 2px;
     background: var(--rosa);
     transition: all .5s ease-in-out;
-    z-index: -1;
-    
+    z-index: -1; 
 }
 
-.titleProjects h3:hover::before {
-    content: '';
-    height: 100%;
-    position: absolute;
+@media (hover: hover) {
+
+    .titleProjects h3:hover::before {
+        height: 2.9vw;
+    }
 }
+
+.titleProjects span{
+    background: linear-gradient(120deg, var(--rosa) 20.69%, rgb(230, 149, 111) 79.69%);
+    margin: auto;
+    margin-bottom: .2vw;
+    font-size: 2vw;
+    font-weight: 600;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+/* Default screen size (1280-1024) */
+
+@media all and (min-width: 1024px) and (max-width: 1280px) {
+    
+    .projectsCover {
+        padding-top: 110px;
+    }
+
+    .titleProjects h3::before {
+        width: 15.3vw;
+        left: 2px;
+    }
+}
+
+/* Landscape tablet size (1024-768) */
+
+@media all and (min-width: 768px) and (max-width: 1024px)  {
+
+    .projectsCover {
+        padding-top: 90px;
+    }
+
+    .titleProjects h3::before {
+        width: 15.55vw;
+        left: 1px;
+    }
+}
+
+ /* Tablet size (768-480) */
+
+ @media all and (min-width: 480px) and (max-width: 768px) { 
+
+    .projectsCover {
+        padding-top: 70px;
+    }
+
+    .titleProjects h3::before {
+        width: 15.7vw;
+        left: 1px;
+    }
+ }
+  
+ /* Phone size (480-menos ) */
+
+ @media all and (max-width: 480px) { 
+
+    .projectsCover {
+        padding-top: 45px;
+    }
+
+    .titleProjects h3::before {
+        width: 17.1vw;
+        left: 0;
+        height: 1vw;
+    }
+
+    .titleProjects h3:hover::before {
+        height: 2.45vw;
+    }
+ }
