--- a/Portfolio/src/app/components/projects/projects.component.html
+++ b/Portfolio/src/app/components/projects/projects.component.html
@@ -1,8 +1,8 @@
 <section class="projects">
     <div class="projectsCover">
         <div class="titleProjects">
-            <h2>Projectos</h2>
-            <h3>Projectos más destacados</h3>
+            <span>Algunos de mis Proyectos</span>
+            <h3>Proyectos destacados</h3>
         </div>
         <app-carousel-projects></app-carousel-projects>
     </div>
