--- a/Portfolio/src/app/components/works/works.component.html
+++ b/Portfolio/src/app/components/works/works.component.html
@@ -1,6 +1,6 @@
 <section class="works">
     <div class="titleWorks">
-        <h2>Trabajos</h2>
+        <h2>Works</h2>
         <h3>Experiencia más relevante</h3>
     </div>
    <app-gallery-works></app-gallery-works>
