Responsive percentage skills

--- a/Portfolio/src/app/components/percentages-skills/percentages-skills.component.html
+++ b/Portfolio/src/app/components/percentages-skills/percentages-skills.component.html
@@ -1,57 +1,31 @@
 <div class="containerSkills">
     <div class="skillCard">
-        <div class="progress" data-progress="90">
-            <div class="progress__mask progress__mask--full">
-              <div class="progress__fill"></div>
-            </div>
-            <div class="progress__mask">
-              <div class="progress__fill"></div>
-            </div>
-        </div>
+        <div class="rating">62</div>
+        <div class="rating-mask"></div>
         <h4>HTML/CSS</h4>
     </div>
     <div class="skillCard">
-        <div class="progress" data-progress="50">
-            <div class="progress__mask progress__mask--full">
-              <div class="progress__fill"></div>
-            </div>
-            <div class="progress__mask">
-              <div class="progress__fill"></div>
-            </div>
-        </div>
+        <div class="rating">50</div>
+        <div class="rating-mask"></div>
         <h4>Angular</h4>
     </div>
     <div class="skillCard">
-        <div class="progress" data-progress="65">
-            <div class="progress__mask progress__mask--full">
-              <div class="progress__fill"></div>
-            </div>
-            <div class="progress__mask">
-              <div class="progress__fill"></div>
-            </div>
-        </div>
+      <div>
+        <div class="rating">25</div>
+        <div class="rating-mask"></div>
+      </div>
         <h4>JavaScript</h4>
     </div>
     <div class="skillCard">
-        <div class="progress" data-progress="70">
-            <div class="progress__mask progress__mask--full">
-              <div class="progress__fill"></div>
-            </div>
-            <div class="progress__mask">
-              <div class="progress__fill"></div>
-            </div>
-        </div>
+      <div>
+        <div class="rating">75</div>
+        <div class="rating-mask"></div>
+      </div>
         <h4>Photoshop</h4>
     </div>
     <div class="skillCard">
-        <div class="progress" data-progress="80">
-            <div class="progress__mask progress__mask--full">
-              <div class="progress__fill"></div>
-            </div>
-            <div class="progress__mask">
-              <div class="progress__fill"></div>
-            </div>
-        </div>
+        <div class="rating">95</div>
+        <div class="rating-mask"></div>
         <h4>Illustrator</h4>
     </div>
 </div>
