--- a/Portfolio/src/app/components/percentages-skills/percentages-skills.component.css
+++ b/Portfolio/src/app/components/percentages-skills/percentages-skills.component.css
@@ -3,353 +3,201 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 100px 200px 150px 200px;
+    padding: 100px 200px 50px 200px;
 }
 
 .skillCard {
     padding: 0 50px;
     text-align: center;
+    --rating-size: 80px;
+    --bar-size: 12px;
 }
 
 .skillCard h4 {
-    margin-top: 30px;
+    position: relative;
+    top: -4.5vw;
     letter-spacing: 1px;
 }
 
-.progress {
-    --diameter: 150px;
-    --stroke: 20px;
-    background: var(--grisMedio);
-    border-radius: 50%;
-    height: var(--diameter);
-    width: var(--diameter);
-    position: relative;
-    box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.3);
-}
-.progress__mask, .progress__fill {
-    border-radius: 50%;
-    clip: rect(0, var(--diameter), var(--diameter), calc(var(--diameter) / 2));
-    height: var(--diameter);
-    width: var(--diameter);
-    overflow: hidden;
-    position: absolute;
-}
-.progress__fill {
-    background: var(--celeste);
-    clip: rect(0, calc(var(--diameter) / 2), var(--diameter), 0);
-}
-.progress:after {
-    position: absolute;
-    content: attr(data-progress);
-    background: var(--grisOscuro);
-    border-radius: 50%;
-    display: flex;
-    bottom: var(--stroke);
-    top: var(--stroke);
-    left: var(--stroke);
-    right: var(--stroke);
-    justify-content: center;
-    align-items: center;
-    color: transparent;
-    font-size: 1.5rem;
-}
-.progress[data-progress="1"] .progress__mask--full, .progress[data-progress="1"] .progress__fill {
-    transform: rotate(1.8deg);
-}
-.progress[data-progress="2"] .progress__mask--full, .progress[data-progress="2"] .progress__fill {
-    transform: rotate(3.6deg);
-}
-.progress[data-progress="3"] .progress__mask--full, .progress[data-progress="3"] .progress__fill {
-    transform: rotate(5.4deg);
-}
-.progress[data-progress="4"] .progress__mask--full, .progress[data-progress="4"] .progress__fill {
-    transform: rotate(7.2deg);
-}
-.progress[data-progress="5"] .progress__mask--full, .progress[data-progress="5"] .progress__fill {
-    transform: rotate(9deg);
-}
-.progress[data-progress="6"] .progress__mask--full, .progress[data-progress="6"] .progress__fill {
-    transform: rotate(10.8deg);
-}
-.progress[data-progress="7"] .progress__mask--full, .progress[data-progress="7"] .progress__fill {
-    transform: rotate(12.6deg);
-}
-.progress[data-progress="8"] .progress__mask--full, .progress[data-progress="8"] .progress__fill {
-    transform: rotate(14.4deg);
-}
-.progress[data-progress="9"] .progress__mask--full, .progress[data-progress="9"] .progress__fill {
-    transform: rotate(16.2deg);
-}
-.progress[data-progress="10"] .progress__mask--full, .progress[data-progress="10"] .progress__fill {
-    transform: rotate(18deg);
-}
-.progress[data-progress="11"] .progress__mask--full, .progress[data-progress="11"] .progress__fill {
-    transform: rotate(19.8deg);
-}
-.progress[data-progress="12"] .progress__mask--full, .progress[data-progress="12"] .progress__fill {
-    transform: rotate(21.6deg);
-}
-.progress[data-progress="13"] .progress__mask--full, .progress[data-progress="13"] .progress__fill {
-    transform: rotate(23.4deg);
-}
-.progress[data-progress="14"] .progress__mask--full, .progress[data-progress="14"] .progress__fill {
-    transform: rotate(25.2deg);
-}
-.progress[data-progress="15"] .progress__mask--full, .progress[data-progress="15"] .progress__fill {
-    transform: rotate(27deg);
-}
-.progress[data-progress="16"] .progress__mask--full, .progress[data-progress="16"] .progress__fill {
-    transform: rotate(28.8deg);
-}
-.progress[data-progress="17"] .progress__mask--full, .progress[data-progress="17"] .progress__fill {
-    transform: rotate(30.6deg);
-}
-.progress[data-progress="18"] .progress__mask--full, .progress[data-progress="18"] .progress__fill {
-    transform: rotate(32.4deg);
-}
-.progress[data-progress="19"] .progress__mask--full, .progress[data-progress="19"] .progress__fill {
-    transform: rotate(34.2deg);
-}
-.progress[data-progress="20"] .progress__mask--full, .progress[data-progress="20"] .progress__fill {
-    transform: rotate(36deg);
-}
-.progress[data-progress="21"] .progress__mask--full, .progress[data-progress="21"] .progress__fill {
-    transform: rotate(37.8deg);
-}
-.progress[data-progress="22"] .progress__mask--full, .progress[data-progress="22"] .progress__fill {
-    transform: rotate(39.6deg);
-}
-.progress[data-progress="23"] .progress__mask--full, .progress[data-progress="23"] .progress__fill {
-    transform: rotate(41.4deg);
-}
-.progress[data-progress="24"] .progress__mask--full, .progress[data-progress="24"] .progress__fill {
-    transform: rotate(43.2deg);
-}
-.progress[data-progress="25"] .progress__mask--full, .progress[data-progress="25"] .progress__fill {
-    transform: rotate(45deg);
-}
-.progress[data-progress="26"] .progress__mask--full, .progress[data-progress="26"] .progress__fill {
-    transform: rotate(46.8deg);
-}
-.progress[data-progress="27"] .progress__mask--full, .progress[data-progress="27"] .progress__fill {
-    transform: rotate(48.6deg);
-}
-.progress[data-progress="28"] .progress__mask--full, .progress[data-progress="28"] .progress__fill {
-    transform: rotate(50.4deg);
-}
-.progress[data-progress="29"] .progress__mask--full, .progress[data-progress="29"] .progress__fill {
-    transform: rotate(52.2deg);
-}
-.progress[data-progress="30"] .progress__mask--full, .progress[data-progress="30"] .progress__fill {
-    transform: rotate(54deg);
-}
-.progress[data-progress="31"] .progress__mask--full, .progress[data-progress="31"] .progress__fill {
-    transform: rotate(55.8deg);
-}
-.progress[data-progress="32"] .progress__mask--full, .progress[data-progress="32"] .progress__fill {
-    transform: rotate(57.6deg);
-}
-.progress[data-progress="33"] .progress__mask--full, .progress[data-progress="33"] .progress__fill {
-    transform: rotate(59.4deg);
-}
-.progress[data-progress="34"] .progress__mask--full, .progress[data-progress="34"] .progress__fill {
-    transform: rotate(61.2deg);
-}
-.progress[data-progress="35"] .progress__mask--full, .progress[data-progress="35"] .progress__fill {
-    transform: rotate(63deg);
-}
-.progress[data-progress="36"] .progress__mask--full, .progress[data-progress="36"] .progress__fill {
-    transform: rotate(64.8deg);
-}
-.progress[data-progress="37"] .progress__mask--full, .progress[data-progress="37"] .progress__fill {
-    transform: rotate(66.6deg);
-}
-.progress[data-progress="38"] .progress__mask--full, .progress[data-progress="38"] .progress__fill {
-    transform: rotate(68.4deg);
-}
-.progress[data-progress="39"] .progress__mask--full, .progress[data-progress="39"] .progress__fill {
-    transform: rotate(70.2deg);
-}
-.progress[data-progress="40"] .progress__mask--full, .progress[data-progress="40"] .progress__fill {
-    transform: rotate(72deg);
-}
-.progress[data-progress="41"] .progress__mask--full, .progress[data-progress="41"] .progress__fill {
-    transform: rotate(73.8deg);
-}
-.progress[data-progress="42"] .progress__mask--full, .progress[data-progress="42"] .progress__fill {
-    transform: rotate(75.6deg);
-}
-.progress[data-progress="43"] .progress__mask--full, .progress[data-progress="43"] .progress__fill {
-    transform: rotate(77.4deg);
-}
-.progress[data-progress="44"] .progress__mask--full, .progress[data-progress="44"] .progress__fill {
-    transform: rotate(79.2deg);
-}
-.progress[data-progress="45"] .progress__mask--full, .progress[data-progress="45"] .progress__fill {
-    transform: rotate(81deg);
-}
-.progress[data-progress="46"] .progress__mask--full, .progress[data-progress="46"] .progress__fill {
-    transform: rotate(82.8deg);
-}
-.progress[data-progress="47"] .progress__mask--full, .progress[data-progress="47"] .progress__fill {
-    transform: rotate(84.6deg);
-}
-.progress[data-progress="48"] .progress__mask--full, .progress[data-progress="48"] .progress__fill {
-    transform: rotate(86.4deg);
-}
-.progress[data-progress="49"] .progress__mask--full, .progress[data-progress="49"] .progress__fill {
-    transform: rotate(88.2deg);
-}
-.progress[data-progress="50"] .progress__mask--full, .progress[data-progress="50"] .progress__fill {
-    transform: rotate(90deg);
-}
-.progress[data-progress="51"] .progress__mask--full, .progress[data-progress="51"] .progress__fill {
-    transform: rotate(91.8deg);
-}
-.progress[data-progress="52"] .progress__mask--full, .progress[data-progress="52"] .progress__fill {
-    transform: rotate(93.6deg);
-}
-.progress[data-progress="53"] .progress__mask--full, .progress[data-progress="53"] .progress__fill {
-    transform: rotate(95.4deg);
-}
-.progress[data-progress="54"] .progress__mask--full, .progress[data-progress="54"] .progress__fill {
-    transform: rotate(97.2deg);
-}
-.progress[data-progress="55"] .progress__mask--full, .progress[data-progress="55"] .progress__fill {
-    transform: rotate(99deg);
-}
-.progress[data-progress="56"] .progress__mask--full, .progress[data-progress="56"] .progress__fill {
-    transform: rotate(100.8deg);
-}
-.progress[data-progress="57"] .progress__mask--full, .progress[data-progress="57"] .progress__fill {
-    transform: rotate(102.6deg);
-}
-.progress[data-progress="58"] .progress__mask--full, .progress[data-progress="58"] .progress__fill {
-    transform: rotate(104.4deg);
-}
-.progress[data-progress="59"] .progress__mask--full, .progress[data-progress="59"] .progress__fill {
-    transform: rotate(106.2deg);
-}
-.progress[data-progress="60"] .progress__mask--full, .progress[data-progress="60"] .progress__fill {
-    transform: rotate(108deg);
-}
-.progress[data-progress="61"] .progress__mask--full, .progress[data-progress="61"] .progress__fill {
-    transform: rotate(109.8deg);
-}
-.progress[data-progress="62"] .progress__mask--full, .progress[data-progress="62"] .progress__fill {
-    transform: rotate(111.6deg);
-}
-.progress[data-progress="63"] .progress__mask--full, .progress[data-progress="63"] .progress__fill {
-    transform: rotate(113.4deg);
-}
-.progress[data-progress="64"] .progress__mask--full, .progress[data-progress="64"] .progress__fill {
-    transform: rotate(115.2deg);
-}
-.progress[data-progress="65"] .progress__mask--full, .progress[data-progress="65"] .progress__fill {
-    transform: rotate(117deg);
-}
-.progress[data-progress="66"] .progress__mask--full, .progress[data-progress="66"] .progress__fill {
-    transform: rotate(118.8deg);
-}
-.progress[data-progress="67"] .progress__mask--full, .progress[data-progress="67"] .progress__fill {
-    transform: rotate(120.6deg);
-}
-.progress[data-progress="68"] .progress__mask--full, .progress[data-progress="68"] .progress__fill {
-    transform: rotate(122.4deg);
-}
-.progress[data-progress="69"] .progress__mask--full, .progress[data-progress="69"] .progress__fill {
-    transform: rotate(124.2deg);
-}
-.progress[data-progress="70"] .progress__mask--full, .progress[data-progress="70"] .progress__fill {
-    transform: rotate(126deg);
-}
-.progress[data-progress="71"] .progress__mask--full, .progress[data-progress="71"] .progress__fill {
-    transform: rotate(127.8deg);
-}
-.progress[data-progress="72"] .progress__mask--full, .progress[data-progress="72"] .progress__fill {
-    transform: rotate(129.6deg);
-}
-.progress[data-progress="73"] .progress__mask--full, .progress[data-progress="73"] .progress__fill {
-    transform: rotate(131.4deg);
-}
-.progress[data-progress="74"] .progress__mask--full, .progress[data-progress="74"] .progress__fill {
-    transform: rotate(133.2deg);
-}
-.progress[data-progress="75"] .progress__mask--full, .progress[data-progress="75"] .progress__fill {
-    transform: rotate(135deg);
-}
-.progress[data-progress="76"] .progress__mask--full, .progress[data-progress="76"] .progress__fill {
-    transform: rotate(136.8deg);
-}
-.progress[data-progress="77"] .progress__mask--full, .progress[data-progress="77"] .progress__fill {
-    transform: rotate(138.6deg);
-}
-.progress[data-progress="78"] .progress__mask--full, .progress[data-progress="78"] .progress__fill {
-    transform: rotate(140.4deg);
-}
-.progress[data-progress="79"] .progress__mask--full, .progress[data-progress="79"] .progress__fill {
-    transform: rotate(142.2deg);
-}
-.progress[data-progress="80"] .progress__mask--full, .progress[data-progress="80"] .progress__fill {
-    transform: rotate(144deg);
-}
-.progress[data-progress="81"] .progress__mask--full, .progress[data-progress="81"] .progress__fill {
-    transform: rotate(145.8deg);
-}
-.progress[data-progress="82"] .progress__mask--full, .progress[data-progress="82"] .progress__fill {
-    transform: rotate(147.6deg);
-}
-.progress[data-progress="83"] .progress__mask--full, .progress[data-progress="83"] .progress__fill {
-    transform: rotate(149.4deg);
-}
-.progress[data-progress="84"] .progress__mask--full, .progress[data-progress="84"] .progress__fill {
-    transform: rotate(151.2deg);
-}
-.progress[data-progress="85"] .progress__mask--full, .progress[data-progress="85"] .progress__fill {
-    transform: rotate(153deg);
-}
-.progress[data-progress="86"] .progress__mask--full, .progress[data-progress="86"] .progress__fill {
-    transform: rotate(154.8deg);
-}
-.progress[data-progress="87"] .progress__mask--full, .progress[data-progress="87"] .progress__fill {
-    transform: rotate(156.6deg);
-}
-.progress[data-progress="88"] .progress__mask--full, .progress[data-progress="88"] .progress__fill {
-    transform: rotate(158.4deg);
-}
-.progress[data-progress="89"] .progress__mask--full, .progress[data-progress="89"] .progress__fill {
-    transform: rotate(160.2deg);
-}
-.progress[data-progress="90"] .progress__mask--full, .progress[data-progress="90"] .progress__fill {
-    transform: rotate(162deg);
-}
-.progress[data-progress="91"] .progress__mask--full, .progress[data-progress="91"] .progress__fill {
-    transform: rotate(163.8deg);
-}
-.progress[data-progress="92"] .progress__mask--full, .progress[data-progress="92"] .progress__fill {
-    transform: rotate(165.6deg);
-}
-.progress[data-progress="93"] .progress__mask--full, .progress[data-progress="93"] .progress__fill {
-    transform: rotate(167.4deg);
-}
-.progress[data-progress="94"] .progress__mask--full, .progress[data-progress="94"] .progress__fill {
-    transform: rotate(169.2deg);
-}
-.progress[data-progress="95"] .progress__mask--full, .progress[data-progress="95"] .progress__fill {
-    transform: rotate(171deg);
-}
-.progress[data-progress="96"] .progress__mask--full, .progress[data-progress="96"] .progress__fill {
-    transform: rotate(172.8deg);
-}
-.progress[data-progress="97"] .progress__mask--full, .progress[data-progress="97"] .progress__fill {
-    transform: rotate(174.6deg);
-}
-.progress[data-progress="98"] .progress__mask--full, .progress[data-progress="98"] .progress__fill {
-    transform: rotate(176.4deg);
-}
-.progress[data-progress="99"] .progress__mask--full, .progress[data-progress="99"] .progress__fill {
-    transform: rotate(178.2deg);
-}
-.progress[data-progress="100"] .progress__mask--full, .progress[data-progress="100"] .progress__fill {
-    transform: rotate(180deg);
-}
+@media all and (min-width: 768px) {
+
+    .skillCard {
+        --rating-size: 100px;
+        --bar-size: 12px;
+    }
+
+    .rating {
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 100%;
+        overflow: hidden;
+        background: var(--celeste);
+        color: var(--celeste);
+        width: var(--rating-size);
+        height: var(--rating-size);
+        z-index: 2;
+    }
+
+    .rating-mask {
+        position: relative;
+        bottom: var(--rating-size);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 100%;
+        overflow: hidden;
+        background: var(--grisMedio);
+        color: var(--celeste);
+        width: var(--rating-size);
+        height: var(--rating-size);
+        z-index: 1;
+    }
+  
+/* Bar mask, creates an inner circle with the same color as thee background */
+
+    .rating::after {
+        content: "";
+        position: absolute;
+        top: var(--bar-size);
+        right: var(--bar-size);
+        bottom: var(--bar-size);
+        left: var(--bar-size);
+        background: var(--grisOscuro);
+        border-radius: inherit;
+        z-index: 2;
+    }
+
+    /* Classes to give different colors to ratings, based on their score */
+
+    .rating.good {
+        background: var(--rating-color-good);
+        color: var(--rating-color-good);
+    }
+  
+    .rating.meh {
+        background: var(--rating-color-meh);
+        color: var(--rating-color-meh);
+    }
+  
+    .rating.bad {
+        background: var(--rating-color-bad);
+        color: var(--rating-color-bad);
+    }
+}
+
+/* Default screen size (1280-1024) */
+
+@media all and (min-width: 1024px) and (max-width: 1280px) {
+
+    .skillCard {
+        padding: 0 40px;
+        text-align: center;
+        --rating-size: 130px;
+        --bar-size: 18px;
+    }
+
+    .skillCard h4 {
+        position: relative;
+        top: -90px;
+        letter-spacing: 1px;
+    }
+}
+
+/* Landscape tablet size (1024-768) */
+
+@media all and (min-width: 768px) and (max-width: 1024px)  {
+
+    .skillCard {
+        padding: 0 30px;
+        text-align: center;
+        --rating-size: 100px;
+        --bar-size: 12px;
+    }
+
+    .skillCard h4 {
+        position: relative;
+        top: -6.5vw;
+        letter-spacing: 1px;
+        font-size: 15px;
+    }
+}
+
+ /* Tablet size (768-480) */
+
+ @media all and (min-width: 480px) and (max-width: 768px) { 
+
+    .skillCard {
+        padding: 0 20px;
+        text-align: center;
+        --rating-size: 80px;
+        --bar-size: 10px;
+    }
+
+    .skillCard h4 {
+        position: relative;
+        top: -6.5vw;
+        letter-spacing: 1px;
+        font-size: 12px;
+    }
+ }
+  
+ /* Phone size (480-menos ) */
+
+ @media all and (max-width: 480px) { 
+
+    .containerSkills {
+        flex-direction: column;
+        width: 100%;
+        padding: 0;
+    }
+    
+    .skillCard {
+        padding: 20px 0;
+        text-align: left;
+    }
+
+    .skillCard h4 {
+        margin-top: 20px;
+        letter-spacing: 1px;
+        font-size: small;
+    }
+
+    .progress {
+        --width: 150px;
+        --height: 10px;
+        --stroke: 12px;
+        background: var(--grisMedio);
+        height: var(--height);
+        width: var(--width);
+        position: relative;
+        box-shadow: 2px 2px 2px 0 rgba(0, 0, 0, 0.3);
+    }
+
+    .progress__mask, .progress__fill {
+        height: var(--height);
+        width: 50%;
+        overflow: hidden;
+        position: absolute;
+    }
+
+    .progress__fill {
+        background: var(--celeste);
+    }
+
+    .progress:after {
+        position: absolute;
+        content: attr(data-progress);
+        background: var(--grisOscuro);
+        display: flex;
+        bottom: var(--stroke);
+        top: var(--stroke);
+        left: var(--stroke);
+        right: var(--stroke);
+        justify-content: center;
+        align-items: center;
+        color: transparent;
+        font-size: 1.5rem;
+    }
+ }
